сука все работает

--- a/app/index.html
+++ b/app/index.html
@@ -1,55 +1,54 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
-<meta charset="UTF-8">
-<title>Text2SQL Streaming</title>
-<style>
-  body { font-family: Arial, sans-serif; padding: 20px; }
-  #output { white-space: pre-wrap; border: 1px solid #ccc; padding: 10px; height: 300px; overflow-y: scroll; }
-  input[type="text"] { width: 300px; }
-</style>
+  <meta charset="UTF-8">
+  <title>FastAPI Streaming Test</title>
+  <style>
+    body { font-family: monospace; padding: 20px; }
+    textarea { width: 100%; height: 60px; }
+    button { margin-top: 10px; }
+    pre { background: #f4f4f4; padding: 10px; white-space: pre-wrap; }
+  </style>
 </head>
 <body>
+  <h1>Тест FastAPI Streaming</h1>
 
-<h2>Text2SQL Streaming Demo</h2>
+  <textarea id="textInput" placeholder="Введите текст запроса...">Покажи количество транзакций по городам</textarea>
+  <br>
+  <button id="sendBtn">Отправить</button>
 
-<label for="textInput">Введите текст для обработки:</label><br>
-<input type="text" id="textInput" placeholder="Например: 'Покажи все транзакции из Шымкента за 2024'">
-<button id="sendBtn">Отправить</button>
+  <h2>Результат:</h2>
+  <pre id="output"></pre>
 
-<h3>Результат:</h3>
-<div id="output"></div>
+  <script>
+    const btn = document.getElementById('sendBtn');
+    const output = document.getElementById('output');
+    const textInput = document.getElementById('textInput');
 
-<script>
-document.getElementById("sendBtn").addEventListener("click", async () => {
-    const text = document.getElementById("textInput").value;
-    if (!text) return;
+    btn.addEventListener('click', async () => {
+      const text = encodeURIComponent(textInput.value);
+      output.textContent = "Загрузка...";
 
-    const outputDiv = document.getElementById("output");
-    outputDiv.textContent = ""; // Очистка
-
-    try {
-        const response = await fetch(`http://localhost:8002/process-text?text=${encodeURIComponent(text)}`);
+      try {
+        const response = await fetch(`http://localhost:8002/process-text?text=${text}`);
         if (!response.ok) throw new Error(`Ошибка сервера: ${response.status}`);
 
         const reader = response.body.getReader();
-        const decoder = new TextDecoder();
-        let done = false;
+        const decoder = new TextDecoder("utf-8");
+        let result = "";
 
-        while (!done) {
-            const { value, done: readerDone } = await reader.read();
-            done = readerDone;
-            if (value) {
-                const chunk = decoder.decode(value, { stream: true });
-                outputDiv.textContent += chunk; // Добавляем полученный кусок
-                outputDiv.scrollTop = outputDiv.scrollHeight; // Автопрокрутка
-            }
+        while (true) {
+          const { done, value } = await reader.read();
+          if (done) break;
+          result += decoder.decode(value, { stream: true });
+          output.textContent = result; // обновляем на лету
         }
-    } catch (err) {
-        outputDiv.textContent = `Ошибка: ${err.message}`;
-    }
-});
-</script>
 
+        output.textContent = result; // финальный результат
+      } catch (err) {
+        output.textContent = "Ошибка: " + err.message;
+      }
+    });
+  </script>
 </body>
 </html>
